[project]
name = "prompt-injection-env"
version = "0.1.0"
description = "Prompt Injection Defense Environment"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openai"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"